--- a/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
+++ b/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
@@ -8,7 +8,8 @@
   
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.4" />
-    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.3.0-B0001" />
+    <PackageReference Include="Microsoft.PSRule.Rules.Azure" Version="1.17.0-B0064" />
+    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.3.0-B0006" />
   </ItemGroup>
   
   <ItemGroup>
