preliminary unit test work

--- a/src/Analyzer.Core.UnitTests/Analyzer.Core.UnitTests.csproj
+++ b/src/Analyzer.Core.UnitTests/Analyzer.Core.UnitTests.csproj
@@ -19,6 +19,12 @@
     <ProjectReference Include="..\Analyzer.Core\Analyzer.Core.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<Content Include="templates\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
   <Import Project="..\TTK.targets" />
 
 </Project>
