--- a/src/Analyzer.Reports.UnitTests/TestTemplates/SQLServerAuditingSettings.json
+++ b/src/Analyzer.Reports.UnitTests/TestTemplates/SQLServerAuditingSettings.json
@@ -9,6 +9,26 @@
   "resources": [
     {
       "type": "Microsoft.Sql/servers",
+      "name": "FailsSQLRetentionDaysRule",
+      "apiVersion": "2020-02-02-preview",
+      "properties": {
+        "kind": "v12.0"
+      },
+      "resources": [
+        {
+          "apiVersion": "2020-02-02-preview",
+          "type": "auditingSettings",
+          "name": "default",
+          "properties": {
+            "isAzureMonitorTargetEnabled": false,
+            "storageEndpoint": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccountName')), '2019-06-01').PrimaryEndpoints.Blob]",
+            "retentionDays": 45
+          }
+        }
+      ]
+    },
+    {
+      "type": "Microsoft.Sql/servers",
       "name": "FailsSQLRetentionDaysRuleWithFullResourceTypeAndName",
       "apiVersion": "2020-02-02-preview",
       "properties": {
