--- a/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
+++ b/src/Analyzer.Core.NuGet/Analyzer.Core.nuspec
@@ -12,12 +12,15 @@
 
     <dependencies>
       <group targetFramework="net6.0">
-        <dependency id="Azure.Deployments.Core" version="1.0.568" />
-        <dependency id="Azure.Deployments.Expression" version="1.0.568" />
-        <dependency id="Azure.Deployments.Templates" version="1.0.568" />
+        <dependency id="Azure.Bicep.Core" version="0.8.9" />
+        <dependency id="Azure.Deployments.Core" version="1.0.635" />
+        <dependency id="Azure.Deployments.Expression" version="1.0.635" />
+        <dependency id="Azure.Deployments.Templates" version="1.0.635" />
         <dependency id="Newtonsoft.Json" version="13.0.1" />
         <dependency id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" />
         <dependency id="Microsoft.PowerShell.SDK" version="7.2.4" />
+        <dependency id="Microsoft.PSRule.Rules.Azure" version="1.19.0-B0010" />
+        <dependency id="Microsoft.PSRule.SDK" version="2.4.0-B0039" />
         <dependency id="Sarif.Sdk" version="2.4.12" />
         <dependency id="System.IO.Abstractions" version="13.2.47" />
       </group>
