report writers updates for bicep modules

--- a/src/Analyzer.Reports.UnitTests/Analyzer.Reports.UnitTests.csproj
+++ b/src/Analyzer.Reports.UnitTests/Analyzer.Reports.UnitTests.csproj
@@ -30,4 +30,10 @@
     <ProjectReference Include="..\Analyzer.Reports\Analyzer.Reports.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Module2.bicep">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
