Use the ArmTemplateProcessor in the JsonLineNumberResolver tests, to avoid definining the expanded templates ourselves, and add a test case for dependsOn

--- a/src/Analyzer.Utilities.UnitTests/Analyzer.Utilities.UnitTests.csproj
+++ b/src/Analyzer.Utilities.UnitTests/Analyzer.Utilities.UnitTests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Analyzer.TemplateProcessor\Analyzer.TemplateProcessor.csproj" />
     <ProjectReference Include="..\Analyzer.Utilities\Analyzer.Utilities.csproj" />
   </ItemGroup>
 
