removed excessive test files, added TemplateWithSeparateParametersFile.json test file

--- a/src/Analyzer.Cli.FunctionalTests/Analyzer.Cli.FunctionalTests.csproj
+++ b/src/Analyzer.Cli.FunctionalTests/Analyzer.Cli.FunctionalTests.csproj
@@ -28,6 +28,9 @@
     <None Update="Tests\Invalid.bicep">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Tests\ToTestSeparateParametersFile\TemplateWithSeparateParametersFile.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
  
 </Project>
