code review comments

--- a/src/Analyzer.BicepProcessor.UnitTests/templates/AppServicesLogs-Failures.json
+++ b/src/Analyzer.BicepProcessor.UnitTests/templates/AppServicesLogs-Failures.json
@@ -19,7 +19,7 @@
       "location": "[parameters('location')]",
       "properties": {
         "siteConfig": {
-
+          /* extra lines test preservation of formatting in result line numbers */
           "detailedErrorLoggingEnabled": false,
 
           "httpLoggingEnabled": false,
