--- a/src/Analyzer.Reports/Analyzer.Reports.csproj
+++ b/src/Analyzer.Reports/Analyzer.Reports.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Microsoft.Azure.Templates.Analyzer.Reports</AssemblyName>
     <RootNamespace>Microsoft.Azure.Templates.Analyzer.Reports</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Sarif.Sdk" Version="2.4.12" />
-    <PackageReference Include="System.IO.Abstractions" Version="13.2.47" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.1.5" />
   </ItemGroup>
 
   <ItemGroup>
