--- a/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
+++ b/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 
   <metadata>
-    <id>Azure.Templates.TemplateProcessing</id>
+    <id>Azure.Templates.Analyzer.TemplateProcessing</id>
     <version>$version$</version>
     <authors>Microsoft</authors>
     <description>ARM and Bicep Template template processing classes</description>
@@ -24,7 +24,7 @@
   </metadata>
 
   <files>
-    <file src="..\Analyzer.BicepProcessor\bin\$configuration$\net6.0\Analyzer.BicepProcessor.dll" target="lib\net6.0\" />
+    <file src="..\Analyzer.BicepProcessor\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.BicepProcessor.dll" target="lib\net6.0\" />
     <file src="..\Analyzer.TemplateProcessor\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.TemplateProcessor.dll" target="lib\net6.0\" />
     <file src="..\Analyzer.Utilities\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.Utilities.dll" target="lib\net6.0\" />
     <file src="..\Analyzer.Types\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.Types.dll" target="lib\net6.0\" />
