--- a/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
+++ b/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
@@ -8,8 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.4" />
-    <PackageReference Include="Microsoft.PSRule.Rules.Azure" Version="1.22.0-B0011" />
-    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.6.0-B0013" />
+    <PackageReference Include="Microsoft.PSRule.Rules.Azure" Version="1.26.0-B0011" />
+    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.8.0" />
   </ItemGroup>
 
   <ItemGroup>
