Create new nuget for template processing code, updates for release 0.5.0 (#324)
* initial commit for new nuget package for template processing

* renaming

* fixes

* cleanup

* removing extra code from merge

* nuspec fix, tool version to 0.4.1

* PSRule update

* namespace fix

* bumping rest of projects to net6.0, updating some dependencies, test fixes

* Update src/Analyzer.Utilities/TemplateDiscovery.cs

Co-authored-by: Anais Miller <anamille@microsoft.com>

* Update src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj

Co-authored-by: Johnathon Mohr <JohnathonMohr@users.noreply.github.com>

* code review comments

* code review comments

* increasing version to 0.5.0

* deleting unused file

* code review comment

* PSRule update

* undo local test fixes

* newtonsoft fix

* updating version to 0.4.1

* nuget updates

* psrule dependency updates

* increase version to 0.5.0

---------

Co-authored-by: Anais Miller <anamille@microsoft.com>
Co-authored-by: Johnathon Mohr <JohnathonMohr@users.noreply.github.com>

--- a/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
+++ b/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
@@ -1,7 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <AssemblyName>Microsoft.Azure.Templates.Analyzer.BicepProcessor</AssemblyName>
+    <RootNamespace>Microsoft.Azure.Templates.Analyzer.BicepProcessor</RootNamespace>
   </PropertyGroup>
   
   <ItemGroup>
@@ -9,8 +11,8 @@
   </ItemGroup>
   
   <ItemGroup>
-    <PackageReference Include="Azure.Bicep.Core" Version="0.12.40" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Azure.Bicep.Core" Version="0.14.85" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
     
 </Project>
