--- a/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
+++ b/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+
   <metadata>
-    <id>Azure.Templates.Analyzer.Core</id>
+    <id>Azure.Templates.Analyzer.TemplateProcessing</id>
     <version>$version$</version>
     <authors>Microsoft</authors>
-    <description>ARM and Bicep Template scanner for security misconfigurations and best practices</description>
+    <description>ARM and Bicep Template template processing classes</description>
     <copyright>© Microsoft Corporation. All rights reserved.</copyright>
     <license type="expression">MIT</license>
     <projectUrl>https://github.com/Azure/template-analyzer</projectUrl>
     <tags>arm bicep azure template analyzer scanner deployment security</tags>
 
-    <dependencies>
+   <dependencies>
       <group targetFramework="net6.0">
         <dependency id="Azure.Bicep.Core" version="0.14.85" />
         <dependency id="Azure.Deployments.Core" version="1.0.815" />
@@ -18,18 +19,15 @@
         <dependency id="Azure.Deployments.Templates" version="1.0.815" />
         <dependency id="Newtonsoft.Json" version="13.0.3" />
         <dependency id="Microsoft.Extensions.Logging.Abstractions" version="6.0.1" />
-        <dependency id="Microsoft.PowerShell.SDK" version="7.2.4" />
-        <dependency id="Microsoft.PSRule.Rules.Azure" version="1.22.0-B0011" />
-        <dependency id="Microsoft.PSRule.SDK" version="2.6.0-B0013" />
-        <dependency id="Sarif.Sdk" version="2.4.12" />
-        <dependency id="System.IO.Abstractions" version="19.1.5" />
       </group>
     </dependencies>
-
   </metadata>
 
   <files>
-    <file src="..\Analyzer.Core\bin\$configuration$\**" target="lib\" exclude="**\*.pdb;**\ref\**" />
+    <file src="..\Analyzer.BicepProcessor\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.BicepProcessor.dll" target="lib\net6.0\" />
+    <file src="..\Analyzer.TemplateProcessor\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.TemplateProcessor.dll" target="lib\net6.0\" />
+    <file src="..\Analyzer.Utilities\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.Utilities.dll" target="lib\net6.0\" />
+    <file src="..\Analyzer.Types\bin\$configuration$\net6.0\Microsoft.Azure.Templates.Analyzer.Types.dll" target="lib\net6.0\" />
   </files>
-
+  
 </package>
