--- a/src/Analyzer.TemplateProcessor/Analyzer.TemplateProcessor.csproj
+++ b/src/Analyzer.TemplateProcessor/Analyzer.TemplateProcessor.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <AssemblyName>Microsoft.Azure.Templates.Analyzer.TemplateProcessor</AssemblyName>
     <RootNamespace>Microsoft.Azure.Templates.Analyzer.TemplateProcessor</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Azure.Deployments.Core" Version="1.0.750" />
-    <PackageReference Include="Azure.Deployments.Expression" Version="1.0.750" />
-    <PackageReference Include="Azure.Deployments.Templates" Version="1.0.750" />
+    <PackageReference Include="Azure.Deployments.Core" Version="1.0.815" />
+    <PackageReference Include="Azure.Deployments.Expression" Version="1.0.815" />
+    <PackageReference Include="Azure.Deployments.Templates" Version="1.0.815" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
