--- a/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
+++ b/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.2.12" />
-    <PackageReference Include="Microsoft.PSRule.Rules.Azure" Version="1.26.0-B0011" />
-    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.8.0" />
+    <PackageReference Include="Microsoft.PowerShell.SDK" Version="7.3.11" />
+    <PackageReference Include="Microsoft.PSRule.Rules.Azure" Version="1.32.1" />
+    <PackageReference Include="Microsoft.PSRule.SDK" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
