--- a/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
+++ b/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
@@ -12,6 +12,9 @@
   
   <ItemGroup>
     <PackageReference Include="Azure.Bicep.Core" Version="0.24.24" />
+    <!--Az.Id version forced here due to CG alert. After net8 upgrade, will be able
+    to update Bicep.Core to version with safe Az.Id dependency and can remove below -->
+    <PackageReference Include="Azure.Identity" Version="1.10.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
     
