update PSRule, part 2

--- a/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
+++ b/src/Analyzer.PowerShellRuleEngine.UnitTests/Analyzer.PowerShellRuleEngine.UnitTests.csproj
@@ -24,4 +24,9 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="templates\templateWithDefaultLocation.json" />
+    <None Remove="templates\templateWithHardcodedLocation.json" />
+  </ItemGroup>
+
 </Project>
