--- a/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
+++ b/src/Analyzer.TemplateProcessing.NuGet/Analyzer.TemplateProcessing.nuspec
@@ -14,6 +14,9 @@
    <dependencies>
       <group targetFramework="net7.0">
         <dependency id="Azure.Bicep.Core" version="0.24.24" />
+        <!--Az.Id version forced here due to CG alert. After net8 upgrade, will be able
+        to update Bicep.Core to version with safe Az.Id dependency and can remove below -->
+        <dependency id="Azure.Identity" Version="1.10.4" />
         <dependency id="Azure.Deployments.Core" version="1.0.1103" />
         <dependency id="Azure.Deployments.Expression" version="1.0.1103" />
         <dependency id="Azure.Deployments.Templates" version="1.0.1103" />
