--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -9,6 +9,7 @@
     <PackageVersion Include="Azure.Deployments.Core" Version="1.0.1158" />
     <PackageVersion Include="Azure.Deployments.Expression" Version="1.0.1158" />
     <PackageVersion Include="Azure.Deployments.Templates" Version="1.0.1158" />
+    <PackageVersion Include="Azure.Identity" Version="1.11.4"/>
     <PackageVersion Include="coverlet.collector" Version="3.0.2" />
     <PackageVersion Include="FluentAssertions" Version="6.2.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="6.0.0" />
@@ -23,8 +24,14 @@
     <PackageVersion Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageVersion Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageVersion Include="Sarif.Sdk" Version="2.4.12" />
+    <PackageVersion Include="Sarif.Sdk" Version="2.4.16" />
     <PackageVersion Include="System.CommandLine" Version="2.0.0-beta1.20574.7" />
-    <PackageVersion Include="System.IO.Abstractions" Version="19.1.5" />
+    <PackageVersion Include="System.Data.SqlClient" Version="4.8.6" />
+    <PackageVersion Include="System.IO.Packaging" Version="8.0.1" />
+    <PackageVersion Include="System.Formats.Asn1" Version="8.0.1" />
+    <PackageVersion Include="System.IO.Abstractions" Version="20.0.4" />
+    <PackageVersion Include="System.Net.Http" Version="4.3.4" />
+    <PackageVersion Include="System.Text.Json" Version="8.0.5" />
+    <PackageVersion Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 </Project>
