--- a/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
+++ b/src/Analyzer.BicepProcessor/Analyzer.BicepProcessor.csproj
@@ -10,6 +10,6 @@
   <ItemGroup>
     <PackageReference Include="Azure.Bicep.Core" />
     <PackageReference Include="Newtonsoft.Json" />
-    <PackageReference Include="System.IO.Abstractions" VersionOverride="20.0.4" />
+    <PackageReference Include="System.IO.Abstractions" />
   </ItemGroup>
 </Project>
