--- a/src/Analyzer.Core/Analyzer.Core.csproj
+++ b/src/Analyzer.Core/Analyzer.Core.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
-    <PackageReference Include="System.IO.Abstractions" VersionOverride="20.0.4" />
-    <PackageReference Include="Sarif.Sdk" VersionOverride="2.4.16" />
+    <PackageReference Include="System.IO.Abstractions" />
+    <PackageReference Include="Sarif.Sdk" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Analyzer.JsonRuleEngine\Analyzer.JsonRuleEngine.csproj" />
