--- a/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
+++ b/src/Analyzer.PowerShellRuleEngine/Analyzer.PowerShellRuleEngine.csproj
@@ -8,8 +8,8 @@
     <PackageReference Include="Microsoft.PowerShell.SDK" />
     <PackageReference Include="Microsoft.PSRule.Rules.Azure" />
     <PackageReference Include="Microsoft.PSRule.SDK" />
-    <PackageReference Include="Sarif.Sdk" VersionOverride="2.4.16" />
-    <PackageReference Include="System.IO.Abstractions" VersionOverride="20.0.4" />
+    <PackageReference Include="Sarif.Sdk" />
+    <PackageReference Include="System.IO.Abstractions" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Analyzer.BicepProcessor\Analyzer.BicepProcessor.csproj" />
